# eevee-eval

./: .default.yaml.swp  .gitignore  Cargo.toml  build.rs  default.yaml  flake.nix
config/: .tetris-c.yaml.swp  ataxx.yaml  connect4.yaml  nes-super-mario.yaml  nes-tetris.yaml  oware.yaml  tetris-c.yaml  tic-tac-toe.yaml
nes-tetris/: Cargo.toml
nes-tetris/src/: main.rs
src/: lib.rs  main.rs  tetris.rs
src/scenarios/: c.rs  mario.rs  mod.rs  nes.rs
src/scenarios/board_game/: ataxx.rs  connect4.rs  mod.rs  oware.rs  ttt.rs
tetris-c/: Cargo.toml
tetris-c/src/: main.rs
