[workspace]
members = ["tetris-c"]
resolver = "2"

[workspace.dependencies]
eevee = { path = "../eevee" }
nes_rust_slim = "~0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[package]
name = "eevee-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eevee-eval"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap.workspace = true
eevee = { workspace = true, features = ["serialize_json"] }
nes_rust_slim.workspace = true
rand = "~0.9"
board-game = "~0.8"
internal-iterator = "~0.2"
serde.workspace = true
serde_yaml.workspace = true

[dependencies.rayon]
version = "~1.10"
optional = true

[dependencies.minifb]
version = "0.27"
optional = true

[build-dependencies]
cc = "1"

[features]
parallel = ["eevee/parallel", "dep:rayon"]
x11nes = ["dep:minifb"]
